--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Dasmoto's Arts & Crafts</title>
-        <link href="./index.css" type="text/css" rel="stylesheet">
+        <link href="https://github.com/EElun/EElun.github.io/blob/main/index.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <h1>Dasmoto's Arts & Crafts</h1>
